Added styles, js

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,40 @@
-<ul>
-	<li><%= link_to 'Home', root_path %></li>
-	<li><%= link_to 'Products', pages_products_path %></li>
-	<li><%= link_to 'Guide', pages_guide_path %></li>
-	<li><%= link_to 'About', pages_about_path %></li>
-	<li><%= link_to 'Contact', pages_contact_path %></li>
-</ul>
+<div class="header">
+        <div class="container">
+            <!-- Logo -->
+            <a class="logo" href="index.html">
+                <img src="assets/img/logo1-default.png" alt="Logo">
+            </a>
+            <!-- End Logo -->
+            
+            <!-- Topbar -->
+            <div class="topbar">
+                <ul class="loginbar pull-right">
+                    <li><a href="page_faq.html">Help</a></li>  
+                    <li class="topbar-devider"></li>   
+                    <li><a href="page_login.html">Login</a></li>   
+                </ul>
+            </div>
+            <!-- End Topbar -->
+
+            <!-- Toggle get grouped for better mobile display -->
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="fa fa-bars"></span>
+            </button>
+            <!-- End Toggle -->
+        </div><!--/end container-->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li><%= link_to 'Home', root_path %></li>
+                    <li><%= link_to 'Products', pages_products_path %></li>
+                    <li><%= link_to 'Guide', pages_guide_path %></li>
+					<li><%= link_to 'About', pages_about_path %></li>
+					<li><%= link_to 'Contact', pages_contact_path %></li>
+                </ul>
+            </div><!--/end container-->
+        </div><!--/navbar-collapse-->
+    </div>
+    <!--=== End Header ===-->
